third_party/move/move-compiler-v2/tests/checking/typing/uninferred_type_unpack_decl.exp

Diagnostics:
error: unable to infer instantiation of type `S<_1>` (consider providing type arguments or annotating the type)
  ┌─ tests/checking/typing/uninferred_type_unpack_decl.move:5:13
  │
5 │         let S{};
  │             ^^^
